# smallchat

./: CMakeLists.txt  README.md  main.cpp
fe/: package-lock.json  package.json  vue.config.js
fe/src/: App.vue
fe/src/components/: Message.vue
fe/src/router/: index.js
fe/src/views/: Chat.vue  Home.vue
